# Ryth

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
benchmarks/: __init__.py  forward.py  memory.py  speed.py
configs/: README.md  rde_default.json  rde_prototype.json
corpus/: __init__.py  cli.py  config.py  languages.py  pipeline.py  report.py
corpus/cleaners/: __init__.py  pipeline.py  rules.py
corpus/dedup/: __init__.py  exact.py  near.py
corpus/download/: __init__.py  base.py  github.py  http.py  huggingface.py  local.py
corpus/exporters/: __init__.py  jsonl.py  parquet.py  raw.py  rds.py
corpus/filters/: __init__.py  language.py  rules.py
corpus/licenses/: __init__.py  detect.py  spdx.py
corpus/metadata/: __init__.py  record.py  store.py
corpus/quality/: __init__.py  score.py  signals.py
corpus/sources/: __init__.py  registry.py
corpus/split/: __init__.py  splitter.py
corpus/tasks/: __init__.py  builders.py  mixer.py
dataset/: __init__.py  chunker.py  cleaner.py  cli.py  config.py  curriculum.py  dataset.py  dedup.py  encoder.py  fim.py  language.py  lock.py  pipeline.py  quality.py  rds.py  record.py  report.py  repository.py  sharding.py  stats.py  tokenizer_adapter.py  validator.py
docs/: architecture.md  corpus.md  dataset_engine.md  faq.md  model.md  quickstart.md  rds_format.md  tokenizer.md  training.md
examples/: example_decode_tokens.py  example_encode_dataset.py  example_inspect_dataset.py  example_train_tokenizer.py  example_verify_dataset.py
model/: __init__.py  checkpoint.py  config.py  decoder.py  embedding.py  feedforward.py  generate.py  hooks.py  init.py  lm_head.py  metrics.py  rmsnorm.py  rope.py  transformer_block.py
model/attention/: __init__.py  base.py  factory.py  gqa.py  mla.py
notebooks/: README.md  ryth_end_to_end.ipynb  ryth_kaggle_train.ipynb
scripts/: build_dataset.sh  create_v0.2.0_board.sh  kaggle_train.py  run_tests.sh
tests/: __init__.py  sample_data.py  test_corpus.py  test_model.py  test_rde.py  test_tokenizer.py  test_training.py
tokenizer/: __init__.py  bpe.py  cli.py  train.py
training/: __init__.py  benchmark.py  callbacks.py  checkpoint.py  cli.py  config.py  curriculum.py  dataloader.py  evaluator.py  gradient.py  logger.py  loss.py  metrics.py  optimizer.py  precision.py  profiler.py  scheduler.py  trainer.py
