[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ryth"
version = "0.3.0"
description = "Ryth — a coding-first LLM built from scratch: a scratch byte-level BPE tokenizer, the Ryth Data Engine (RDE), a decoder-only transformer model core, and a pure-PyTorch training engine."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RAJ-af" }]
keywords = ["llm", "tokenizer", "bpe", "dataset", "machine-learning", "code-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core RDE + tokenizer are pure standard library — no required runtime deps.
dependencies = []

[project.optional-dependencies]
fast = ["xxhash>=3.0"]          # faster chunk dedup (optional)
model = ["torch>=2.1"]          # required for the model core (model/ package)
train = ["torch>=2.1"]          # training engine (training/ package); + optional tensorboard
corpus-parquet = ["pyarrow>=12.0"]   # corpus Parquet export (optional)
corpus-hf = ["datasets>=2.0"]        # corpus Hugging Face sources (optional)
dev = ["pytest>=7.0", "torch>=2.1"]

[project.urls]
Homepage = "https://github.com/RAJ-af/Ryth"
Repository = "https://github.com/RAJ-af/Ryth"
Issues = "https://github.com/RAJ-af/Ryth/issues"

[project.scripts]
ryth-tokenizer = "tokenizer.cli:main"
ryth-rde = "dataset.cli:main"
ryth-train = "training.cli:main"
ryth-corpus = "corpus.cli:main"

[tool.setuptools]
packages = [
    "tokenizer", "dataset", "model", "model.attention", "training",
    "corpus", "corpus.metadata", "corpus.licenses", "corpus.sources",
    "corpus.download", "corpus.cleaners", "corpus.filters", "corpus.dedup",
    "corpus.quality", "corpus.split", "corpus.tasks", "corpus.exporters",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
